--- a/mcp/release-notes.mdx
+++ b/mcp/release-notes.mdx
@@ -146,11 +146,16 @@ async def get_user_info(user_id: str):
 <CodeWithTabs>
 
 ```python !!tabs Python
-# Using official Python SDK - mcp[cli] package
-from mcp.server.fastmcp import FastMCP
-from mcp.types import CallToolResult
+# Using official Python SDK - mcp package
+from mcp.server import Server
+from mcp.types import (
+    CallToolRequestSchema,
+    ListToolsRequestSchema,
+    Tool,
+    CallToolResult,
+)
 
-mcp = FastMCP("My Server")
+server = Server("example-server")
 
 # Define tool with outputSchema
 @mcp.tool()
@@ -185,8 +190,44 @@ get_user_info.outputSchema = {
                 "status": {"type": "string"}
             }
         }
-    }
-}
+        
+        return CallToolResult(
+            content=[{"type": "text", "text": f"Retrieved user {arguments['user_id']}"}],
+            # New: Use structuredContent for predictable data format
+            structuredContent=user_data
+        )
+
+# Register tool with outputSchema
+@server.list_tools()
+async def handle_list_tools() -> list[Tool]:
+    return [
+        Tool(
+            name="get_user_info",
+            description="Get structured user information",
+            inputSchema={
+                "type": "object",
+                "properties": {
+                    "user_id": {"type": "string"}
+                },
+                "required": ["user_id"]
+            },
+            # New: Add outputSchema to specify return format
+            outputSchema={
+                "type": "object",
+                "properties": {
+                    "user": {
+                        "type": "object",
+                        "properties": {
+                            "id": {"type": "string"},
+                            "name": {"type": "string"},
+                            "email": {"type": "string"},
+                            "status": {"type": "string"}
+                        }
+                    }
+                }
+            }
+        )
+    ]
 ```
 
 ```typescript !!tabs TypeScript
@@ -275,59 +316,93 @@ MCP servers are now classified as [OAuth Resource Servers](https://modelcontextp
 <CodeWithTabs>
 
 ```python !!tabs Python Server
-from mcp.server import Server
+# Using official Python SDK - mcp package
+from mcp.server.fastmcp import FastMCP
+from mcp.server.auth.provider import TokenVerifier, TokenInfo
+from mcp.server.auth.settings import AuthSettings
 
-app = Server("example-server")
-
-# MUST: Expose authorization server discovery metadata
-@app.get("/.well-known/oauth-authorization-server")
-async def oauth_metadata():
-    return {
-        "authorization_endpoint": "https://auth.example.com/oauth/authorize",
-        "token_endpoint": "https://auth.example.com/oauth/token",
-        "resource": "https://api.example.com/",
-        "scopes_supported": ["read", "write"]
-    }
-
-# Server must validate resource-scoped tokens
-@app.middleware("http")
-async def validate_resource_token(request, call_next):
-    auth_header = request.headers.get("authorization")
-    if auth_header:
-        token = auth_header.replace("Bearer ", "")
+class MyTokenVerifier(TokenVerifier):
+    async def verify_token(self, token: str) -> TokenInfo:
         # MUST: Validate token is scoped to this resource
-        if not token_validator.validate_resource_scope(token, "https://api.example.com/"):
-            raise HTTPException(401, "Token not valid for this resource")
-    return await call_next(request)
+        # Verify with your authorization server via token introspection
+        response = await introspect_token(token)
+        if not response.get("active"):
+            raise ValueError("Token is not active")
+        
+        # Verify resource scope 
+        if "https://api.example.com/" not in response.get("aud", []):
+            raise ValueError("Token not valid for this resource")
+            
+        return TokenInfo(
+            sub=response["sub"],
+            scopes=response["scope"].split(),
+            expires_at=response["exp"]
+        )
+
+# Create server with OAuth Resource Server configuration  
+mcp = FastMCP(
+    "example-server",
+    token_verifier=MyTokenVerifier(),
+    auth=AuthSettings(
+        # MUST: Expose authorization server discovery metadata
+        issuer_url="https://auth.example.com",
+        resource_server_url="https://api.example.com/",
+        required_scopes=["read", "write"],
+    ),
+)
+
+async def introspect_token(token: str) -> dict:
+    # Your token introspection implementation
+    # Typically calls your authorization server's introspection endpoint
+    pass
 ```
 
 ```python !!tabs Python Client  
-import httpx
-from mcp.client import Client
+# Using official Python SDK - mcp package
+from mcp.client.auth import OAuthClientProvider, TokenStorage
+from mcp.client.session import ClientSession
+from mcp.client.streamable_http import streamablehttp_client
+from mcp.shared.auth import OAuthClientInformationFull, OAuthClientMetadata, OAuthToken
 
-class SecureClient(Client):
-    async def get_access_token(self, server_url: str, scopes: list[str]):
-        # MUST: Include resource parameter per RFC 8707
-        token_data = {
-            "grant_type": "client_credentials",
-            "scope": " ".join(scopes),
-            # MUST: Specify target resource to prevent token misuse
-            "resource": server_url,
-            "client_id": self.client_id,
-            "client_secret": self.client_secret
-        }
-        
-        response = await httpx.post(
-            "https://auth.example.com/oauth/token",
-            data=token_data
-        )
-        return response.json()["access_token"]
-    
-    async def connect_to_server(self, server_url: str):
-        # Get resource-scoped token before connecting
-        token = await self.get_access_token(server_url, ["read", "write"])
-        headers = {"Authorization": f"Bearer {token}"}
-        return await super().connect(server_url, headers=headers)
+class SecureTokenStorage(TokenStorage):
+    async def get_tokens(self) -> OAuthToken | None:
+        # Load tokens from secure storage
+        pass
+
+    async def set_tokens(self, tokens: OAuthToken) -> None:
+        # Save tokens to secure storage
+        pass
+
+    async def get_client_info(self) -> OAuthClientInformationFull | None:
+        # Load client registration info
+        pass
+
+    async def set_client_info(self, client_info: OAuthClientInformationFull) -> None:
+        # Save client registration info  
+        pass
+
+async def connect_to_protected_server():
+    # Set up OAuth authentication with Resource Indicators
+    oauth_auth = OAuthClientProvider(
+        server_url="https://api.example.com/",  # MUST: Specify target resource
+        client_metadata=OAuthClientMetadata(
+            client_name="My MCP Client",
+            redirect_uris=["http://localhost:3000/callback"],
+            grant_types=["authorization_code", "refresh_token"],
+            response_types=["code"],
+        ),
+        storage=SecureTokenStorage(),
+        redirect_handler=lambda url: print(f"Visit: {url}"),
+        callback_handler=lambda: ("auth_code", None),
+    )
+
+    # Connect with resource-scoped authentication
+    async with streamablehttp_client(
+        "https://api.example.com/mcp", auth=oauth_auth
+    ) as (read, write, _):
+        async with ClientSession(read, write) as session:
+            await session.initialize()
+            # Authenticated session ready with resource-scoped tokens
 ```
 
 </CodeWithTabs>
@@ -345,38 +420,52 @@ The new [elicitation](https://modelcontextprotocol.io/specification/2025-06-18/c
 <CodeWithTabs>
 
 ```python !!tabs Python
-# Using official Python SDK - mcp[cli] package
-from mcp.server.fastmcp import FastMCP, Context
-from mcp.server.elicitation import AcceptedElicitation, DeclinedElicitation
-from pydantic import BaseModel, Field
+# Using official Python SDK - mcp package
+from mcp.server import Server
+from mcp.types import CallToolResult, ElicitationRequest
 
-mcp = FastMCP("Booking System")
+server = Server("booking-system", capabilities={"tools": {}, "elicitation": {}})
 
-@mcp.tool()
-async def complex_query(query: str, ctx: Context) -> str:
-    """Process a query, requesting additional details if needed"""
-    
-    if missing_context(query):
-        # Schema must only contain primitive types (str, int, float, bool)
-        class FormatPreference(BaseModel):
-            format: str = Field(description="Output format preference")
-            include_metadata: bool = Field(default=False, description="Include metadata in output")
+@server.call_tool()
+async def handle_call_tool(name: str, arguments: dict, context) -> CallToolResult:
+    if name == "complex_query":
+        query = arguments.get("query", "")
         
-        # Request additional information from user using elicit
-        result = await ctx.elicit(
-            message="I need more details about your requirements. What specific format would you like the output in?",
-            schema=FormatPreference
+        if missing_context(query):
+            # Request additional information from user using elicit
+            elicitation_request = ElicitationRequest(
+                message="I need more details about your requirements. What specific format would you like the output in?",
+                schema={
+                    "type": "object",
+                    "properties": {
+                        "format": {
+                            "type": "string",
+                            "description": "Output format preference"
+                        },
+                        "include_metadata": {
+                            "type": "boolean",
+                            "description": "Include metadata in output",
+                            "default": False
+                        }
+                    },
+                    "required": ["format"]
+                }
+            )
+            
+            result = await context.elicit(elicitation_request)
+            
+            if result.action == "accept" and result.data:
+                return CallToolResult(
+                    content=[{"type": "text", "text": process_with_context(query, result.data["format"], result.data.get("include_metadata", False))}]
+                )
+            else:
+                return CallToolResult(
+                    content=[{"type": "text", "text": "User declined to provide additional context or elicitation was cancelled"}]
+                )
+        
+        return CallToolResult(
+            content=[{"type": "text", "text": process_query(query)}]
         )
-        
-        match result:
-            case AcceptedElicitation(data=data):
-                return process_with_context(query, data.format, data.include_metadata)
-            case DeclinedElicitation():
-                return "User declined to provide additional context"
-            case _:
-                return "Elicitation was cancelled"
-    
-    return process_query(query)
 
 def missing_context(query: str) -> bool:
     # Your logic to determine if more context is needed
@@ -394,13 +483,38 @@ def process_query(query: str) -> str:
 ```typescript !!tabs TypeScript  
 // Using official TypeScript SDK - @modelcontextprotocol/sdk package
 import { Server } from "@modelcontextprotocol/sdk/server/index.js";
-import { CallToolRequestSchema, CallToolResult } from "@modelcontextprotocol/sdk/types.js";
+import { 
+  CallToolRequestSchema, 
+  CallToolResult,
+  ListToolsRequestSchema,
+  Tool 
+} from "@modelcontextprotocol/sdk/types.js";
 
 const server = new Server(
-  { name: "example-server", version: "1.0.0" },
+  { name: "booking-system", version: "1.0.0" },
   { capabilities: { tools: {}, elicitation: {} } }
 );
 
+// Register tools
+server.setRequestHandler(ListToolsRequestSchema, async () => {
+  return {
+    tools: [
+      {
+        name: "complex_query",
+        description: "Process a query, requesting additional details if needed",
+        inputSchema: {
+          type: "object",
+          properties: {
+            query: { type: "string", description: "The query to process" }
+          },
+          required: ["query"]
+        }
+      } as Tool
+    ]
+  };
+});
+
+// Handle tool calls with elicitation
 server.setRequestHandler(CallToolRequestSchema, async (request, context) => {
   const { name, arguments: args } = request.params;
   
@@ -449,6 +563,8 @@ server.setRequestHandler(CallToolRequestSchema, async (request, context) => {
       content: [{ type: "text", text: processQuery(query) }]
     } as CallToolResult;
   }
+  
+  throw new Error(`Unknown tool: ${name}`);
 });
 
 function missingContext(query: string): boolean {
@@ -458,7 +574,7 @@ function missingContext(query: string): boolean {
 
 function processWithContext(query: string, format: string, includeMetadata?: boolean): string {
   // Your implementation here
-  return `Processed query '${query}' in ${format} format`;
+  return `Processed query '${query}' in ${format} format${includeMetadata ? ' with metadata' : ''}`;
 }
 
 function processQuery(query: string): string {
